--- a/Web/lab8/index.html
+++ b/Web/lab8/index.html
@@ -7,9 +7,19 @@
         <title>Trivia!</title>
 
         <script>
+            function status(number) {
+                const button = document.querySelector(`.button-${number}`);
+                const p = document.querySelector('.status');
 
-            // TODO: Add code to check answers to questions
+                if (number !== 2) {
+                    button.className = 'wrong';
+                    p.innerHTML = 'Incorrect';
+                    return;
+                }
 
+                button.className = 'correct';
+                p.innerHTML = 'Correct!';
+            }
         </script>
 
     </head>
@@ -24,15 +34,19 @@
             <div class="section">
                 <h2>Part 1: Multiple Choice </h2>
                 <hr>
-
-                <!-- TODO: Add multiple choice question here -->
-
+                <h3>How many continents are there in the world?</h3>
+                <p class="status"></p>
+                
+                <button class="button-1" onclick="status(1)">There are 2 continents</button>
+                <button class="button-2" onclick="status(2)">There are 6 continents</button>
+                <button class="button-3" onclick="status(3)">There are 4 continents</button>
+                <button class="button-4" onclick="status(4)">There are 196 continents</button>
             </div>
 
             <div class="section">
                 <h2>Part 2: Free Response</h2>
                 <hr>
-
+                <h3>Which is the largest continent in the world?</h3>
                 <!-- TODO: Add free response question here -->
 
             </div>
