--- a/Web/homepage/componets/reason2.html
+++ b/Web/homepage/componets/reason2.html
@@ -9,16 +9,17 @@
   <title>Reason 2</title>
 </head>
   <body>
-    <a href="../index.html">Voltar</a>
+    <a href="/">Back</a>
     
     <figure>
-      <h2>🛠 Second Solve Problems</h2>
+      <h2 class="why_title">🛠 Second Solve Problems</h2>
       <img 
+          class="why_img"
           src="https://media.giphy.com/media/3oKIPqsXYcdjcBcXL2/giphy.gif" 
           alt="Gif of tools" 
       />
       <figcaption>
-          <p>
+          <p class="why">
               Be a programmer is a kind of like be mechanical because we have so many tools like Java, 
               Python, C, Javascript, etc... And we have so many problems as well, but different than a
               mechanical we don't have a manual for all problems, we can't just follow step by step to 
