--- a/Web/homepage/componets/reason3.html
+++ b/Web/homepage/componets/reason3.html
@@ -9,16 +9,17 @@
   <title>Reason 1</title>
 </head>
   <body>
-    <a href="../index.html">Voltar</a>
+    <a href="/">Back</a>
     
     <figure>
-      <h2>😴 Make dreams</h2>
+      <h2 class="why_title">😴 Make dreams</h2>
       <img 
+          class="why_img"
           src="https://assets.entrepreneur.com/content/3x2/2000/1393282802-4-ways-entrepreneurs-ensure-get-zs.jpg" 
           alt="A woman slepping" 
       />
       <figcaption>
-          <p>
+          <p class="why">
               Programming's not just about write lines of code, it's about making dreams
               we are the difference and we make this world a better place, we are
               programmers.
